gjorde strykturen i html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 	<title>PokemonTeamManager</title>
 </head>
 <body>
-	
+	<header>
+		<h1>Team Manager</h1> 
+		<h1>Pokémon</h1> 
+		<button>Pokémons</button><button>Team</button><br />
+		<input type="text" placeholder="Hitta din pokémon">
+		
+	</header>
+	<main>
+		<div class="pokemon-card-container">
+
+		</div>
+	</main>
+	<footer>
+
+	</footer>
 </body>
 </html>
