--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="Style/style.css">	
 	<script src="script/script.js"></script>
-	
 	<title>PokemonTeamManager</title>
+
 </head>
 <body>
 	<header>
 		<h1>Team Manager</h1> 
 		<h1>Pokémon</h1> 
-		<button>Pokémons</button><button>Team</button><br />
-		<input type="text" placeholder="Hitta din pokémon">
+		<button id="pokemon-btn">Pokémons</button><button id="team-btn">Team</button><br />
+		<input id="pokemon-search" type="text" placeholder="Hitta din pokémon">
 		
 	</header>
 	<main>
@@ -23,7 +23,7 @@
 		</div>
 	</main>
 	<footer>
-
+		Design made by: Therese Sköld
 	</footer>
 </body>
 </html>
