--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="Style/style.css">	
-	<script src="script/script.js"></script>
+	<link rel="stylesheet" href="Style/pokemoncard.css">
+	<script type="module" src="script/script.js"></script>
 	<title>PokemonTeamManager</title>
 
 </head>
@@ -14,7 +15,7 @@
 		<h1>Team Manager</h1> 
 		<h1>Pokémon</h1> 
 		<button id="pokemon-btn">Pokémons</button><button id="team-btn">Team</button><br />
-		<input id="pokemon-search" type="text" placeholder="Hitta din pokémon">
+		<input id="pokemon-search" type="text" placeholder="Hitta din pokémon"> <button id="search-btn">SÖK</button>
 		
 	</header>
 	<main>
