Fixade de olika vyerna när man klickar på pokemons och team knappen

--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 	<header>
 		<h1>Team Manager</h1> 
 		<h1>Pokémon</h1> 
-		<button id="pokemon-btn">Pokémons</button><button id="team-btn">Team</button><br />
-		<input id="pokemon-search" type="text" placeholder="Hitta din pokémon"> <button id="search-btn">SÖK</button>
+		<button id="pokemon-btn">Pokémons</button><button id="team-btn">Team</button>
+		
 		
 	</header>
 	<main>
+		<input id="pokemon-search" type="text" placeholder="Hitta din pokémon"> <button id="search-btn">SÖK</button>
 		<div class="pokemon-card-container">
+
+		</div>
+		<div class="your-team-container">
 
 		</div>
 	</main>
