--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
 
 		</div>
 		<div class="your-team-container">
+			<h1 class="head-pokemon-team">Ditt pokémonteam!</h1>
 
 		</div>
 	</main>
-	<footer>
+	<!-- <footer>
 		Design made by: Therese Sköld
-	</footer>
+	</footer> -->
 </body>
 </html>
