--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="Style/style.css">	
 	<link rel="stylesheet" href="Style/pokemoncard.css">
 	<script type="module" src="script/script.js"></script>
+	<script type="module" src="Script/utils.js"></script>
 	<title>PokemonTeamManager</title>
 
 </head>
