Äntligen löst sökfunktionen, så att den visar rätt pokemoncards

--- a/index.html
+++ b/index.html
@@ -20,14 +20,29 @@
 		
 	</header>
 	<main>
-		<input id="pokemon-search" type="text" placeholder="Hitta din pokémon"> <button id="search-btn">SÖK</button>
+		
+
+		<div class="search-wrapper">
+			<label for="pokemon-search">Hitta din Pokémon</label>
+			<input id="pokemon-search" type="search">
+		</div>
+		
 		<div class="pokemon-card-container">
+			
 
 		</div>
+		
+
+
 		<div class="your-team-container">
 			<h1 class="head-pokemon-team">Ditt pokémonteam!</h1>
-
 		</div>
+
+		<div class="your-reserves-container">
+			<h1 class="head-pokemon-reservs">Dina reserver</h1>
+		</div>
+
+
 	</main>
 	<!-- <footer>
 		Design made by: Therese Sköld
