Försöker få till ta bort knappen, så att den ska ta bort pokemonen ut arrayen och inte bara från sidan

--- a/index.html
+++ b/index.html
@@ -28,12 +28,9 @@
 		</div>
 		
 		<div class="pokemon-card-container">
-			
-
+			<p class="info">Välj vilken pokémon du vill ha i ditt team!</p>
 		</div>
 		
-
-
 		<div class="your-team-container">
 			<h1 class="head-pokemon-team">Ditt pokémonteam!</h1>
 		</div>
