Fixade så att det gick att rekrytera pokemonen från sökfunktionen

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="Style/style.css">	
 	<link rel="stylesheet" href="Style/pokemoncard.css">
-	<script type="module" src="script/script.js"></script>
+
+	<script type="module" src="Script/script.js"></script>
 	<script type="module" src="Script/utils.js"></script>
 	<title>PokemonTeamManager</title>
 
