Fixade en bättre startsida

--- a/index.html
+++ b/index.html
@@ -17,26 +17,31 @@
 		<h1>Team Manager</h1> 
 		<h1>Pokémon</h1> 
 		<button id="pokemon-btn">Pokémons</button><button id="team-btn">Team</button>
-		
-		
+
 	</header>
 	<main>
 		
-
-		<div class="search-wrapper">
+		<div class="start-section">
+			<h1>Välkommen</h1>
+			<p>Skapa ditt eget Pokémon Team!<br />
+				Starta genom att klicka på pokemons-knappen.
+			</p><br />
+			<img src="/img/pikachu.png">
+		</div>
+		<div class="search-wrapper invisible">
 			<label for="pokemon-search">Hitta din Pokémon</label>
 			<input id="pokemon-search" type="search">
 		</div>
 		
-		<div class="pokemon-card-container">
+		<div class="pokemon-card-container invisible">
 			<p class="info">Välj vilken pokémon du vill ha i ditt team!</p>
 		</div>
 		
-		<div class="your-team-container">
+		<div class="your-team-container invisible">
 			<h1 class="head-pokemon-team">Ditt pokémonteam!</h1>
 		</div>
 
-		<div class="your-reserves-container">
+		<div class="your-reserves-container invisible">
 			<h1 class="head-pokemon-reservs">Dina reserver</h1>
 		</div>
 
