Gjorde så att det går att ta bort ett kort från arrayen

--- a/index.html
+++ b/index.html
@@ -26,24 +26,25 @@
 			<p>Skapa ditt eget Pokémon Team!<br />
 				Starta genom att klicka på pokemons-knappen.
 			</p><br />
-			<img src="/img/pikachu.png">
+			<img id="pikachu" src="/img/pikachu.png">
 		</div>
 		<div class="search-wrapper invisible">
 			<label for="pokemon-search">Hitta din Pokémon</label>
-			<input id="pokemon-search" type="search">
+			<input id="pokemon-search" type="search" placeholder="Sök efter din pokemon här">
 		</div>
-		
+		<p class="info invisible">Välj vilken pokémon du vill ha i ditt team!</p>
 		<div class="pokemon-card-container invisible">
-			<p class="info">Välj vilken pokémon du vill ha i ditt team!</p>
+			
 		</div>
 		
 		<div class="your-team-container invisible">
-			<h1 class="head-pokemon-team">Ditt pokémonteam!</h1>
+		
+			
 		</div>
 
-		<div class="your-reserves-container invisible">
-			<h1 class="head-pokemon-reservs">Dina reserver</h1>
-		</div>
+		
+			
+	
 
 
 	</main>
