--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
 	<script type="module" src="Script/script.js"></script>
 	<script type="module" src="Script/utils.js"></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 	<title>PokemonTeamManager</title>
 
 </head>
