försöker få bilden att synas

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 	<script type="module" src="Script/script.js"></script>
 	<script type="module" src="Script/utils.js"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+	
 	<title>PokemonTeamManager</title>
 
 </head>
@@ -29,7 +30,7 @@
 			<p>Skapa ditt eget Pokémon Team!<br />
 				Starta genom att klicka på pokemons-knappen.
 			</p><br />
-			<img id="pikachu" src="/img/pikachu.png">
+			<img id="pikachu" src="./img/pikachu.png">
 		</div>
 		<div class="search-wrapper invisible">
 			<label for="pokemon-search">Hitta din Pokémon</label>
